--- a/src/assets/sass/_variables.sass
+++ b/src/assets/sass/_variables.sass
@@ -3,6 +3,7 @@
     // Light theme styles
     --tg-color-bg-light: #f8f9fc
     --tg-color-light: #fff
+    --tg-color-light-hover: #f4f4f4
     --tg-color-border-default: #dee3ed
     --tg-color-text-default: #2f3237
     --tg-color-text-gray: #8f96a3
@@ -11,19 +12,24 @@
     --tg-color-secondary: #377f7c
     --tg-scrollbar-bg: #dcdcdc
     --tg-scrollbar-bg-thumb: #afafaf
+    --tg-color-bg-private: rgb(78 220 208 / 15%)
+    --tg-color-bg-private-hover: rgb(78 220 208 / 25%)
 
 @media (prefers-color-scheme: dark)
     :root
         // Dark theme styles
         --tg-color-bg-light: #2e3239
         --tg-color-light: #111213
+        --tg-color-light-hover: #191b1d
         --tg-color-border-default: #2f3237
         --tg-color-text-default: #f1f3f9
-        --tg-color-text-gray: #c2c9d6
+        --tg-color-text-gray: #34363b
         --tg-color-bg-gray: #333333
         --tg-color-primary: #5aa5ea
         --tg-color-secondary: #5ad2cc
         --tg-scrollbar-bg: #222
         --tg-scrollbar-bg-thumb: #555
+        --tg-color-bg-private: rgb(46 225 209 / 10%)
+        --tg-color-bg-private-hover: rgb(46 225 209 / 15%)
 
 
