Add showing links when you open group

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -6,7 +6,7 @@
     --tg-color-light-hover: #f4f4f4
     --tg-color-border-default: #dee3ed
     --tg-color-text-default: #2f3237
-    --tg-color-text-gray: #8f96a3
+    --tg-color-text-gray: #858585
     --tg-color-bg-gray: #555
     --tg-color-primary: #427db3
     --tg-color-secondary: #377f7c
@@ -23,7 +23,7 @@
         --tg-color-light-hover: #191b1d
         --tg-color-border-default: #2f3237
         --tg-color-text-default: #f1f3f9
-        --tg-color-text-gray: #34363b
+        --tg-color-text-gray: #919191
         --tg-color-bg-gray: #333333
         --tg-color-primary: #5aa5ea
         --tg-color-secondary: #5ad2cc
