Add styles for popup

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -1,5 +1,6 @@
 :root
     --tg-padding: 12px
+
     // Light theme styles
     --tg-color-bg-light: #f8f9fc
     --tg-color-light: #fff
@@ -21,7 +22,7 @@
         --tg-color-bg-light: #2e3239
         --tg-color-light: #111213
         --tg-color-light-hover: #191b1d
-        --tg-color-border-default: #2f3237
+        --tg-color-border-default: #21242a
         --tg-color-text-default: #f1f3f9
         --tg-color-text-gray: #919191
         --tg-color-bg-gray: #333333
