Rename some css variables

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -2,34 +2,34 @@
     --tg-padding: 12px
 
     // Light theme styles
-    --tg-color-bg-light: #f8f9fc
-    --tg-color-light: #fff
-    --tg-color-light-hover: #f8f8f8
-    --tg-color-border-default: #dee3ed
-    --tg-color-text-default: #2f3237
-    --tg-color-text-gray: #858585
+    --tg-color-bg: #f8f9fc
+    --tg-color-bg-secondary: #fff
+    --tg-color-bg-secondary-hover: #f8f8f8
+    --tg-color-border: #dee3ed
+    --tg-color-font: #2f3237
+    --tg-color-font-gray: #858585
     --tg-color-bg-gray: #555
     --tg-color-primary: #427db3
     --tg-color-secondary: #377f7c
-    --tg-scrollbar-bg: #dcdcdc
-    --tg-scrollbar-bg-thumb: #afafaf
+    --tg-color-bg-scrollbar: #dcdcdc
+    --tg-color-bg-scrollbar-thumb: #afafaf
     --tg-color-bg-private: rgb(78 220 208 / 15%)
     --tg-color-bg-private-hover: rgb(78 220 208 / 25%)
 
 @media (prefers-color-scheme: dark)
     :root
         // Dark theme styles
-        --tg-color-bg-light: #2e3239
-        --tg-color-light: #111213
-        --tg-color-light-hover: #191b1d
-        --tg-color-border-default: #21242a
-        --tg-color-text-default: #f1f3f9
-        --tg-color-text-gray: #919191
+        --tg-color-bg: #2e3239
+        --tg-color-bg-secondary: #111213
+        --tg-color-bg-secondary-hover: #191b1d
+        --tg-color-border: #21242a
+        --tg-color-font: #f1f3f9
+        --tg-color-font-gray: #919191
         --tg-color-bg-gray: #333333
         --tg-color-primary: #5aa5ea
         --tg-color-secondary: #5ad2cc
-        --tg-scrollbar-bg: #222
-        --tg-scrollbar-bg-thumb: #555
+        --tg-color-bg-scrollbar: #222
+        --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
         --tg-color-bg-private-hover: rgb(46 225 209 / 15%)
 
