--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -8,9 +8,9 @@ html
 
 body
     margin: 0
-    background: var(--tg-color-light)
-    color: var(--tg-color-text-default)
-    border: 1px solid var(--tg-color-border-default)
+    background: var(--tg-color-bg-secondary)
+    color: var(--tg-color-font)
+    border: 1px solid var(--tg-color-border)
     width: 330px
     height: 540px
     font-family: 'Arial', sans-serif
