Add checking tabs and unchecking with checkboxes

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -20,9 +20,9 @@
     :root
         // Dark theme styles
         --tg-color-bg: #2e3239
-        --tg-color-bg-secondary: #111213
+        --tg-color-bg-secondary: #181a1c
         --tg-color-bg-secondary-hover: #191b1d
-        --tg-color-border: #21242a
+        --tg-color-border: #29303d
         --tg-color-font: #f1f3f9
         --tg-color-font-gray: #919191
         --tg-color-bg-gray: #333333
