WIP on save tabs button

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -10,6 +10,7 @@
     --tg-color-font-gray: #858585
     --tg-color-bg-gray: #555
     --tg-color-primary: #427db3
+    --tg-color-primary-hover: #3b72a6
     --tg-color-secondary: #377f7c
     --tg-color-bg-scrollbar: #dcdcdc
     --tg-color-bg-scrollbar-thumb: #afafaf
@@ -23,10 +24,11 @@
         --tg-color-bg-secondary: #181a1c
         --tg-color-bg-secondary-hover: #191b1d
         --tg-color-border: #29303d
-        --tg-color-font: #f1f3f9
+        --tg-color-font: #dbdbdb
         --tg-color-font-gray: #919191
         --tg-color-bg-gray: #333333
         --tg-color-primary: #5aa5ea
+        --tg-color-primary-hover: #4b8fce
         --tg-color-secondary: #5ad2cc
         --tg-color-bg-scrollbar: #222
         --tg-color-bg-scrollbar-thumb: #555
