Add "No groups" message

--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -16,3 +16,10 @@ body
     height: 540px
     font-family: 'Arial', sans-serif
     position: relative
+
+.message
+    font-size: 1.1rem
+    text-align: center
+    margin: 20px auto 0 auto
+    font-weight: normal
+    color: var(--tg-color-font-gray)
