style: Update link-item styles to fix the link ellipsis

--- a/src/popup/assets/sass/_link-item.sass
+++ b/src/popup/assets/sass/_link-item.sass
@@ -53,7 +53,8 @@
         width: 220px
         min-width: 0
 
-        span
+        span,
+        small
             display: block
             white-space: nowrap
             overflow: hidden
@@ -61,8 +62,6 @@
 
         small
             color: var(--tg-color-font-gray)
-            overflow: hidden
-            text-overflow: ellipsis
 
     &__inner
         display: flex
