--- a/src/popup/assets/sass/_form.sass
+++ b/src/popup/assets/sass/_form.sass
@@ -6,3 +6,7 @@
     padding: 5px 6px
     width: 100%
     max-width: 250px
+    color: var(--tg-color-font)
+
+    &:focus
+        outline: 1px solid var(--tg-color-primary)
