Add creating new group

--- a/src/popup/assets/sass/_popup.sass
+++ b/src/popup/assets/sass/_popup.sass
@@ -17,13 +17,16 @@
 
     &__button
         border: 1px solid var(--tg-color-border)
-        border-radius: 4px
-        padding: 7px 20px
+        border-radius: 6px
+        padding: 7px 10px
         font-size: .9rem
         cursor: pointer
         background-color: var(--tg-color-secondary)
         color: var(--tg-color-bg-secondary)
         transition: box-shadow .2s
+        display: inline-flex
+        align-items: center
+        gap: 5px
 
         &:hover
             box-shadow: 0 0 0 4px var(--tg-color-bg-private)
