Refactor password field in settings

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -12,6 +12,7 @@
     --tg-color-primary: #427db3
     --tg-color-primary-hover: #3b72a6
     --tg-color-secondary: #377f7c
+    --tg-color-secondary-hover: #2d6e6b
     --tg-color-bg-scrollbar: #dcdcdc
     --tg-color-bg-scrollbar-thumb: #afafaf
     --tg-color-bg-private: rgb(78 220 208 / 15%)
@@ -30,6 +31,7 @@
         --tg-color-primary: #5aa5ea
         --tg-color-primary-hover: #4b8fce
         --tg-color-secondary: #5ad2cc
+        --tg-color-secondary-hover: #4dbdb8
         --tg-color-bg-scrollbar: #222
         --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
