--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -1,7 +1,9 @@
+@import 'toastify-js/src/toastify.css'
 @import 'variables'
 @import 'link-item'
 @import 'form'
 @import 'popup'
+
 
 *, ::before, ::after
     box-sizing: border-box
@@ -25,3 +27,6 @@ body
     margin: 20px auto 0 auto
     font-weight: normal
     color: var(--tg-color-font-gray)
+
+.toast-close
+    margin-left: 8px
