Add 4 action button controls to a group view

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -17,6 +17,9 @@
     --tg-color-bg-scrollbar-thumb: #afafaf
     --tg-color-bg-private: rgb(78 220 208 / 15%)
     --tg-color-bg-private-hover: rgb(78 220 208 / 25%)
+    --tg-color-orange: rgba(255, 196, 140, .6)
+    --tg-color-blue: rgba(140, 184, 255, .6)
+    --tg-color-green: rgba(108, 243, 166, .6)
 
 @media (prefers-color-scheme: dark)
     :root
@@ -36,5 +39,8 @@
         --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
         --tg-color-bg-private-hover: rgb(46 225 209 / 15%)
+        --tg-color-orange: #a77924
+        --tg-color-blue: #245da7
+        --tg-color-green: #24a761
 
 
