chore: Update color variables in _variables.sass

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -39,8 +39,8 @@
         --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
         --tg-color-bg-private-hover: rgb(46 225 209 / 15%)
-        --tg-color-orange: #a77924
-        --tg-color-blue: #245da7
-        --tg-color-green: #24a761
+        --tg-color-orange: rgba(167, 121, 36, .9)
+        --tg-color-blue: rgba(42, 113, 206, .9)
+        --tg-color-green: rgba(30, 144, 83, .9)
 
 
