--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -17,6 +17,8 @@
     --tg-color-bg-scrollbar-thumb: #afafaf
     --tg-color-bg-private: rgb(78 220 208 / 15%)
     --tg-color-bg-private-hover: rgb(78 220 208 / 25%)
+    --tg-color-bg-unsecure: rgb(208 78 16 / 20%)
+    --tg-color-bg-unsecure-hover: rgb(208 78 16 / 25%)
     --tg-color-orange: rgba(255, 196, 140, .6)
     --tg-color-blue: rgba(140, 184, 255, .6)
     --tg-color-green: rgba(108, 243, 166, .6)
@@ -39,6 +41,8 @@
         --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
         --tg-color-bg-private-hover: rgb(46 225 209 / 15%)
+        --tg-color-bg-unsecure: rgb(250 44 2 / 20%)
+        --tg-color-bg-unsecure-hover: rgb(250 44 2 / 25%)
         --tg-color-orange: rgba(167, 121, 36, .9)
         --tg-color-blue: rgba(42, 113, 206, .9)
         --tg-color-green: rgba(30, 144, 83, .9)
