Change action icons

--- a/src/popup/assets/sass/_variables.sass
+++ b/src/popup/assets/sass/_variables.sass
@@ -22,6 +22,7 @@
     --tg-color-orange: rgba(255, 196, 140, .6)
     --tg-color-blue: rgba(140, 184, 255, .6)
     --tg-color-green: rgba(108, 243, 166, .6)
+    --tg-filter-invert: invert(0)
 
 @media (prefers-color-scheme: dark)
     :root
@@ -46,5 +47,6 @@
         --tg-color-orange: rgba(167, 121, 36, .9)
         --tg-color-blue: rgba(42, 113, 206, .9)
         --tg-color-green: rgba(30, 144, 83, .9)
+        --tg-filter-invert: invert(1)
 
 
