--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -1,5 +1,4 @@
-@import 'toastify-js/src/toastify.css'
-@import 'variables'
+@import '../../../common/assets/sass/main'
 @import 'link-item'
 @import 'form'
 @import 'popup'
@@ -27,6 +26,3 @@ body
     margin: 20px auto 0 auto
     font-weight: normal
     color: var(--tg-color-font-gray)
-
-.toast-close
-    margin-left: 8px
