--- a/src/common/assets/sass/_variables.sass
+++ b/src/common/assets/sass/_variables.sass
@@ -36,8 +36,8 @@
         --tg-color-bg-gray: #333333
         --tg-color-primary: #5aa5ea
         --tg-color-primary-hover: #4b8fce
-        --tg-color-secondary: #5ad2cc
-        --tg-color-secondary-hover: #4dbdb8
+        --tg-color-secondary: #4bb9b4
+        --tg-color-secondary-hover: #3ea7a2
         --tg-color-bg-scrollbar: #222
         --tg-color-bg-scrollbar-thumb: #555
         --tg-color-bg-private: rgb(46 225 209 / 10%)
