--- a/src/settings/assets/sass/main.sass
+++ b/src/settings/assets/sass/main.sass
@@ -1,11 +1,11 @@
 @import '../../../common/assets/sass/main'
-@import 'form'
+@import 'bulma'
 
 *, *::before, *::after
     box-sizing: border-box
 
-body
-    max-width: 700px
+html
+    max-width: 600px
     margin: 0 auto
     background-color: var(--tg-color-bg-secondary)
     color: var(--tg-color-font)
