Add ability to change password

--- a/src/settings/assets/sass/main.sass
+++ b/src/settings/assets/sass/main.sass
@@ -11,3 +11,11 @@ html
     color: var(--tg-color-font)
     font-family: 'Arial', sans-serif
     padding: 20px 0
+
+.is-link.button
+    background-color: var(--tg-color-primary)
+    color: var(--tg-color-bg-secondary)
+
+    &:hover
+        background-color: var(--tg-color-primary-hover)
+        color: var(--tg-color-bg-secondary)
