--- a/src/settings/assets/sass/main.sass
+++ b/src/settings/assets/sass/main.sass
@@ -1,12 +1,9 @@
 @import '../../../common/assets/sass/main'
 
-*, *::before, *::after
-    box-sizing: border-box
+@tailwind base
+@tailwind components
+@tailwind utilities
 
 html
-    margin: 0 auto
-    background-color: var(--tg-color-bg-secondary)
-    color: var(--tg-color-font)
     font-family: 'Arial', sans-serif
-    padding: 20px 0
 
