--- a/src/popup/assets/sass/_form.sass
+++ b/src/popup/assets/sass/_form.sass
@@ -1,5 +1,5 @@
 .input
-    background-color: var(--tg-color-bg-secondary)
+    background-color: var(--tg-page)
     border: 1px solid var(--tg-color-border)
     border-radius: 5px
     font-size: .9rem
