--- a/src/popup/assets/sass/_link-item.sass
+++ b/src/popup/assets/sass/_link-item.sass
@@ -8,14 +8,14 @@
     cursor: pointer
     border: 1px solid var(--tg-color-border)
     border-radius: 8px
-    background-color: var(--tg-color-bg-secondary)
+    background-color: var(--tg-page)
     padding: 8px
     text-decoration: none
     color: var(--tg-color-font)
     font-size: .9rem
 
     &:hover:not(&--selected)
-        background-color: var(--tg-color-bg-secondary-hover)
+        background-color: var(--tg-page-hover)
 
     &--selected
         background-color: var(--tg-color-bg-private)
@@ -24,7 +24,7 @@
         width: 16px
         height: 16px
         flex-shrink: 0
-        background: var(--tg-color-bg-secondary)
+        background: var(--tg-page)
         border: 1px solid var(--tg-color-border)
         border-radius: 4px
         display: flex
