--- a/src/popup/assets/sass/_popup.sass
+++ b/src/popup/assets/sass/_popup.sass
@@ -22,7 +22,7 @@
         font-size: .9rem
         cursor: pointer
         background-color: var(--tg-color-secondary)
-        color: var(--tg-color-bg-secondary)
+        color: var(--tg-page)
         transition: box-shadow .2s
         display: inline-flex
         align-items: center
