--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -1,10 +1,12 @@
-@import '../../../common/assets/sass/main'
-@import 'form'
+@import 'toastify-js/src/toastify.css'
+@import '../../../common/assets/css/style.css'
 @import 'link-item'
+@import 'form'
 @import 'popup'
 
-*, ::before, ::after
-    box-sizing: border-box
+@tailwind base
+@tailwind components
+@tailwind utilities
 
 html
     background: #15292b
@@ -25,3 +27,6 @@ body
     margin: 20px auto 0 auto
     font-weight: normal
     color: var(--tg-color-font-gray)
+
+.toast-close
+    margin-left: 8px
