Changing to tailwindcss

--- a/src/popup/assets/sass/_link-item.sass
+++ b/src/popup/assets/sass/_link-item.sass
@@ -8,23 +8,23 @@
     cursor: pointer
     border: 1px solid var(--tg-color-border)
     border-radius: 8px
-    background-color: var(--tg-page)
+    background-color: var(--tg-color-page)
     padding: 8px
     text-decoration: none
     color: var(--tg-color-font)
     font-size: .9rem
 
     &:hover:not(&--selected)
-        background-color: var(--tg-page-hover)
+        background-color: var(--tg-color-page-hover)
 
     &--selected
-        background-color: var(--tg-color-bg-private)
+        background-color: var(--tg-color-secondary-private)
 
     &__checkbox
         width: 16px
         height: 16px
         flex-shrink: 0
-        background: var(--tg-page)
+        background: var(--tg-color-page)
         border: 1px solid var(--tg-color-border)
         border-radius: 4px
         display: flex
@@ -38,7 +38,7 @@
         &__checkmark
             width: 10px
             height: 10px
-            background-color: var(--tg-color-secondary)
+            background-color: var(--tg-color-private)
             border-radius: 3px
 
     img
