--- a/src/popup/assets/sass/main.sass
+++ b/src/popup/assets/sass/main.sass
@@ -1,7 +1,6 @@
 @import 'toastify-js/src/toastify.css'
 @import '../../../common/assets/css/style.css'
 @import 'link-item'
-@import 'form'
 @import 'popup'
 
 @tailwind base
@@ -13,7 +12,7 @@ html
 
 body
     margin: 0
-    background: var(--tg-page)
+    background: var(--tg-color-page)
     color: var(--tg-color-font)
     border: 1px solid var(--tg-color-border)
     width: 370px
