--- a/src/common/assets/css/_variables.css
+++ b/src/common/assets/css/_variables.css
@@ -1,51 +1,43 @@
 :root {
     /* Light theme */
-    --tg-color-bg: #f8f9fc;
-    --tg-page: #fff;
-    --tg-page-hover: #f8f8f8;
+    --tg-color-secondary: #f8f9fc;
+    --tg-color-page: #fff;
+    --tg-color-page-hover: #f8f8f8;
     --tg-color-border: #dee3ed;
     --tg-color-font: #2f3237;
     --tg-color-font-gray: #858585;
-    --tg-color-bg-gray: #555;
     --tg-color-primary: #427db3;
     --tg-color-primary-hover: #3b72a6;
-    --tg-color-secondary: #377f7c;
-    --tg-color-secondary-hover: #2d6e6b;
-    --tg-color-bg-scrollbar: #dcdcdc;
-    --tg-color-bg-scrollbar-thumb: #afafaf;
-    --tg-color-bg-private: rgb(78 220 208 / 15%);
-    --tg-color-bg-private-hover: rgb(78 220 208 / 25%);
-    --tg-color-bg-unsecure: rgb(208 78 16 / 20%);
-    --tg-color-bg-unsecure-hover: rgb(208 78 16 / 25%);
-    --tg-color-orange: rgba(255, 196, 140, .6);
-    --tg-color-blue: rgba(140, 184, 255, .6);
-    --tg-color-green: rgba(108, 243, 166, .6);
+    --tg-color-private: #377f7c;
+    --tg-color-private-hover: #2d6e6b;
+    --tg-color-secondary-scrollbar: #dcdcdc;
+    --tg-color-secondary-scrollbar-thumb: #afafaf;
+    --tg-color-secondary-private: rgb(78 220 208 / 15%);
+    --tg-color-secondary-private-hover: rgb(78 220 208 / 25%);
+    --tg-color-secondary-unsecure: rgb(208 78 16 / 20%);
+    --tg-color-secondary-unsecure-hover: rgb(208 78 16 / 25%);
     --tg-filter-invert: invert(0);
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         /* Dark theme */
-        --tg-color-bg: #2e3239;
-        --tg-page: #181a1c;
-        --tg-page-hover: #191b1d;
-        --tg-color-border: #29303d;
-        --tg-color-font: #dbdbdb;
-        --tg-color-font-gray: #919191;
-        --tg-color-bg-gray: #333333;
-        --tg-color-primary: #5aa5ea;
-        --tg-color-primary-hover: #4b8fce;
-        --tg-color-secondary: #4bb9b4;
-        --tg-color-secondary-hover: #3ea7a2;
-        --tg-color-bg-scrollbar: #222;
-        --tg-color-bg-scrollbar-thumb: #555;
-        --tg-color-bg-private: rgb(46 225 209 / 10%);
-        --tg-color-bg-private-hover: rgb(46 225 209 / 15%);
-        --tg-color-bg-unsecure: rgb(250 44 2 / 20%);
-        --tg-color-bg-unsecure-hover: rgb(250 44 2 / 25%);
-        --tg-color-orange: rgba(167, 121, 36, .9);
-        --tg-color-blue: rgba(42, 113, 206, .9);
-        --tg-color-green: rgba(30, 144, 83, .9);
+        --tg-color-secondary: theme('colors.gray.800');
+        --tg-color-page: theme('colors.gray.950');
+        --tg-color-page-hover: #01030a;
+        --tg-color-border: theme('colors.gray.800');
+        --tg-color-font: theme('colors.gray.50');
+        --tg-color-font-gray: theme('colors.gray.400');
+        --tg-color-primary: theme('colors.blue.400');
+        --tg-color-primary-hover: theme('colors.blue.500');
+        --tg-color-private: theme('colors.emerald.400');
+        --tg-color-private-hover: theme('colors.emerald.500');
+        --tg-color-secondary-scrollbar: #222;
+        --tg-color-secondary-scrollbar-thumb: #555;
+        --tg-color-secondary-private: rgb(46 225 209 / 10%);
+        --tg-color-secondary-private-hover: rgb(46 225 209 / 15%);
+        --tg-color-secondary-unsecure: rgb(250 44 2 / 20%);
+        --tg-color-secondary-unsecure-hover: rgb(250 44 2 / 25%);
         --tg-filter-invert: invert(1);
     }
 }
