--- a/src/common/modules/main.sass
+++ b/src/common/modules/main.sass
@@ -11,7 +11,7 @@ html
 
 body
     margin: 0
-    background: var(--tg-page)
+    background: var(--tg-color-page)
     color: var(--tg-color-font)
     border: 1px solid var(--tg-color-border)
     width: 370px
