--- a/src/popup/assets/sass/_popup.sass
+++ b/src/popup/assets/sass/_popup.sass
@@ -3,7 +3,7 @@
     top: 50%
     left: 20px
     right: 20px
-    background-color: var(--tg-color-bg)
+    background-color: var(--tg-color-secondary)
     border-radius: 8px
     transform: translateY(-50%)
     padding: 15px
@@ -21,15 +21,15 @@
         padding: 7px 10px
         font-size: .9rem
         cursor: pointer
-        background-color: var(--tg-color-secondary)
-        color: var(--tg-page)
+        background-color: var(--tg-color-private)
+        color: var(--tg-color-page)
         transition: box-shadow .2s
         display: inline-flex
         align-items: center
         gap: 5px
 
         &:hover
-            box-shadow: 0 0 0 4px var(--tg-color-bg-private)
+            box-shadow: 0 0 0 4px var(--tg-color-secondary-private)
 
     &__title
         font-size: 1rem
