--- a/src/common/assets/css/_variables.css
+++ b/src/common/assets/css/_variables.css
@@ -23,10 +23,10 @@
     :root {
         /* Dark theme */
         --tg-color-secondary: theme('colors.gray.800');
-        --tg-color-page: theme('colors.gray.950');
-        --tg-color-page-hover: #01030a;
-        --tg-color-border: theme('colors.gray.900');
-        --tg-color-border-hover: theme('colors.gray.950');
+        --tg-color-page: theme('colors.gray.900');
+        --tg-color-page-hover: theme('colors.gray.800');
+        --tg-color-border: theme('colors.gray.800');
+        --tg-color-border-hover: theme('colors.gray.700');
         --tg-color-font: theme('colors.gray.50');
         --tg-color-font-gray: theme('colors.gray.400');
         --tg-color-primary: theme('colors.cyan.400');
