--- a/src/common/assets/css/_variables.css
+++ b/src/common/assets/css/_variables.css
@@ -3,8 +3,8 @@
     --tg-color-secondary: theme('colors.gray.100');
     --tg-color-page: #fff;
     --tg-color-page-hover: theme('colors.gray.50');
-    --tg-color-border: theme('colors.gray.200');
-    --tg-color-border-hover: theme('colors.gray.300');
+    --tg-color-border: theme('colors.zinc.200');
+    --tg-color-border-hover: theme('colors.zinc.300');
     --tg-color-font: theme('colors.gray.900');
     --tg-color-font-gray: theme('colors.gray.500');
     --tg-color-primary: theme('colors.cyan.700');
@@ -26,8 +26,8 @@
         --tg-color-secondary-hover: #232326;
         --tg-color-page: theme('colors.zinc.900');
         --tg-color-page-hover: #151518;
-        --tg-color-border: theme('colors.gray.800');
-        --tg-color-border-hover: theme('colors.gray.700');
+        --tg-color-border: theme('colors.zinc.800');
+        --tg-color-border-hover: theme('colors.zinc.700');
         --tg-color-font: theme('colors.gray.50');
         --tg-color-font-gray: theme('colors.gray.400');
         --tg-color-primary: theme('colors.cyan.400');
