--- a/src/settings/style.css
+++ b/src/settings/style.css
@@ -4,7 +4,8 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
-    font-family: 'Arial', sans-serif
+body {
+    font-family: sans-serif;
+    font-size: 1rem;
 }
 
