refactor: format code with prettier

--- a/src/common/assets/css/_variables.css
+++ b/src/common/assets/css/_variables.css
@@ -16,8 +16,8 @@
     --tg-color-secondary-scrollbar-thumb: #afafaf;
     --tg-color-safe: rgb(78 220 208 / 15%);
     --tg-color-safe-hover: rgb(78 220 208 / 25%);
-    --tg-color-unsafe: rgba(220, 78, 78, .15);
-    --tg-color-unsafe-hover: rgba(220, 78, 78, .25);
+    --tg-color-unsafe: rgba(220, 78, 78, 0.15);
+    --tg-color-unsafe-hover: rgba(220, 78, 78, 0.25);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -39,9 +39,7 @@
         --tg-color-secondary-scrollbar-thumb: #555;
         --tg-color-safe: rgb(46 225 209 / 10%);
         --tg-color-safe-hover: rgb(46 225 209 / 15%);
-        --tg-color-unsafe: rgba(225, 46, 46, .2);
-        --tg-color-unsafe-hover: rgba(225, 46, 46, .3);
+        --tg-color-unsafe: rgba(225, 46, 46, 0.2);
+        --tg-color-unsafe-hover: rgba(225, 46, 46, 0.3);
     }
 }
-
-
