--- a/src/common/assets/css/style.css
+++ b/src/common/assets/css/style.css
@@ -11,6 +11,7 @@
 
 emoji-picker {
     width: 100%;
+    height: 300px;
     --background: transparent;
     --border-color: transparent;
     --border-size: 0;
