fix: sweetalert windows having fixed positioning

--- a/src/common/assets/css/style.css
+++ b/src/common/assets/css/style.css
@@ -5,6 +5,10 @@
     margin-left: 8px;
 }
 
+.swal2-container {
+    position: absolute !important;
+}
+
 [data-tippy-root] {
     overflow-wrap: break-word;
 }
